wrappers/dotnet/src/BbsSignatures/NativeMethods.cs


        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_sign_context_add_message_string(ulong handle, string message, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_sign_context_add_message_bytes(ulong handle, ByteBuffer message, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_sign_context_add_message_prehashed(ulong handle, ByteBuffer message, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_sign_context_set_public_key(ulong handle, ByteBuffer public_key, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_sign_context_set_secret_key(ulong handle, ByteBuffer secret_key, out ExternError err);

        #endregion

        #region BBS Verify

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern ulong bbs_verify_context_init(out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_context_add_message_string(ulong handle, string message, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_context_add_message_bytes(ulong handle, ByteBuffer message, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_context_add_message_prehashed(ulong handle, ByteBuffer message, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_context_set_public_key(ulong handle, ByteBuffer public_key, out ExternError err);
       
        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_context_set_signature(ulong handle, ByteBuffer signature, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_context_finish(ulong handle, out ExternError err);

        #endregion

        #region BBS Verify Proof

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern ulong bbs_verify_proof_context_init(out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_proof_context_finish(ulong handle, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_proof_context_add_message_string(ulong handle, string message, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_proof_context_add_message_bytes(ulong handle, ByteBuffer message, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_proof_context_add_message_prehashed(ulong handle, ByteBuffer message, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_proof_context_set_proof(ulong handle, ByteBuffer proof, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_proof_context_set_public_key(ulong handle, ByteBuffer public_key, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_proof_context_set_nonce_string(ulong handle, string nonce, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_proof_context_set_nonce_bytes(ulong handle, ByteBuffer nonce, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_proof_context_set_nonce_prehashed(ulong handle, ByteBuffer nonce, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_get_total_messages_count_for_proof(ByteBuffer proof);

        #endregion

        #region BBS Verify Blind Blind Commitment

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern ulong bbs_verify_blind_commitment_context_init(out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_blind_commitment_context_add_blinded(ulong handle, uint index, out ExternError err);
        
        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_blind_commitment_context_set_public_key(ulong handle, ByteBuffer public_key, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_blind_commitment_context_set_nonce_string(ulong handle, string nonce, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_blind_commitment_context_set_nonce_bytes(ulong handle, ByteBuffer nonce, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_blind_commitment_context_set_nonce_prehashed(ulong handle, ByteBuffer nonce, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_blind_commitment_context_set_proof(ulong handle, ByteBuffer proof, out ExternError err);

        [DllImport(BbsSignaturesLibrary, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
        internal static extern int bbs_verify_blind_commitment_context_finish(ulong handle, out ExternError err);

        #endregion
    }
}
